test/classes/errors/nilability-init-field-dflt/init-field-dflt-nonnil-borrowed-from-oknil-borrowed.good
init-field-dflt-nonnil-borrowed-from-oknil-borrowed.chpl:8: error: Cannot initialize 'lhs' of type 'borrowed MyClass' from a 'borrowed MyClass?'
init-field-dflt-nonnil-borrowed-from-oknil-borrowed.chpl:13: error: done
